assets/style/menu.css
.menu-wrap {
    position: relative;
    width: 25px;
    height: 25px;
    margin-left: auto;
}

.dots {
    width: 6px;
    height: 6px;
    background: #313131;
    border-radius: 50%;
    position: relative;
    margin: 10px auto;
}

.dots::before,
.dots::after {
    content: '';
    position: absolute;
    width: 6px;
    height: 6px;
    background: #313131;
    border-radius: 50%;
}
.dots::before {
    top: -8px;
}
.dots::after {
    top: 8px;
}

.menu {
    position: absolute;
    right: 0;
    top: 150%;
    background: #19181d;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    padding: 6px;
    opacity: 0;
    visibility: hidden;
    transition: .3s;
}

.menu ul {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.menu a {
    color: #98999b;
    text-decoration: none;
    display: block;
    padding: 4px 16px;
    white-space: nowrap;
    transition: .3s;
}

.menu a:hover {
    opacity: .6;
}

.menu hr {
    color: #bababa28;
}

.menu button {
    background-color: transparent;
    padding: 4px 12px;
    transition: .3s;
}

.menu button:hover {
    color: crimson;
    background-color: #98999b1f;
}

.toggler {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    cursor: pointer;
    z-index: 1;
}

.toggler:checked~.menu {
    opacity: 1;
    visibility: visible;
}

